Fix flickering theme transition bug on iOS Safari

--- a/webui/src/assets/css/core/theme.css
+++ b/webui/src/assets/css/core/theme.css
@@ -57,11 +57,9 @@
     --color-error-content: #4d0218;
 }
 
-
 :root.theme-switching :is(#navbar,
-    main,
     #sidebar,
-    body,
+    #wrapper,
     .input-field,
     .w3-card,
     .card-separator,
